--- a/Nerde Yesem/Podfile
+++ b/Nerde Yesem/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 
 target 'Nerde Yesem' do
  
- pod 'Alamofire', '~> 4.7'
+ pod 'Alamofire', '~> 5.0.0-beta.5'
  pod 'Kingfisher', '~> 4.0'
 
 
