--- a/Nerde Yesem/Nerde Yesem/Info.plist
+++ b/Nerde Yesem/Nerde Yesem/Info.plist
@@ -2,11 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>googlechromes</string>
-        <string>comgooglemaps</string>
-    </array>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Bu uygulama FaceID veya Parmak İzi&apos;ne ihtiyaç duyar.</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>googlechromes</string>
+		<string>comgooglemaps</string>
+	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Nerde Yesem lokasyonunu çevrendeki restoranları listelemek için kullanır.</string>
 	<key>CFBundleDevelopmentRegion</key>
